...
                android:paddingRight="0px"
                android:progressDrawable="@drawable/mini_player_progress"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="68dp"
                android:layout_marginTop="48dp"
                android:elevation="5dp"
                app:layout_constraintLeft_toLeftOf="@id/header"
                app:layout_constraintRight_toRightOf="@id/header"
                app:layout_constraintTop_toTopOf="@id/header" />

        <ImageView
                android:id="@+id/expanded_back"
                android:layout_width="56dp"
...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />


            <org.videolan.vlc.gui.view.HeaderMediaSwitcher
                    android:id="@+id/audio_media_switcher"
                    android:layout_width="0dp"
                    android:layout_height="76dp"
                    android:background="#00000000"
                    android:layout_marginEnd="64dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="@dimen/audio_player_button_size"
                    android:contentDescription="@string/search"
                    android:focusable="true"
                    android:onClick="@{fragment::onSearchClick}"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/guideline_header_bottom"
                    app:layout_constraintEnd_toStartOf="@+id/playlist_switch"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_search_audio"
                    app:tint="@color/mini_player_control" />

            <ImageView
                    android:id="@+id/playlist_switch"
...
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/show_playlist"
                    android:focusable="true"
                    android:onClick="@{fragment::onPlaylistSwitchClick}"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/guideline_header_bottom"
                    app:layout_constraintEnd_toStartOf="@+id/adv_function"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_playlist_audio_on"
                    app:tint="@color/mini_player_control" />

            <ImageView
                    android:id="@+id/adv_function"
...
                        tools:visibility="visible" />
            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/songs_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:clipToPadding="false"
                android:importantForAccessibility="no"
...
