<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ *************************************************************************
  ~  bottom_navigation.xml
  ~ **************************************************************************
  ~ Copyright © 2020 VLC authors and VideoLAN
  ~ Author: Nicolas POMEPUY
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program; if not, write to the Free Software
  ~ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston MA 02110-1301, USA.
  ~ ***************************************************************************
  ~
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
            android:id="@+id/nav_audio"
            android:title="@string/home"
            android:icon="@drawable/ic_auto_home" />
    <item
            android:id="@+id/nav_discourses"
            android:title="@string/discourses"
            android:icon="@drawable/ic_auto_my_library" />
    <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search" />
    <item
            android:id="@+id/nav_playlists"
            android:title="@string/playlists"
            android:icon="@drawable/ic_playlist" />
    <item
            android:id="@+id/nav_audio_mixer"
            android:title="@string/audio_mixer"
            android:icon="@drawable/ic_playasaudio_on" />

</menu>
